<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.nomosnow.cmpt370_9mare.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_calendar"
        android:name="ca.nomosnow.cmpt370_9mare.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_navigation_calendar_to_createEventFragment"
            app:destination="@id/createEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ca.nomosnow.cmpt370_9mare.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_createEventFragment"
            app:destination="@id/createEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/createEventFragment"
        android:name="ca.nomosnow.cmpt370_9mare.ui.event.CreateEventFragment"
        android:label="@string/title_create_event"
        tools:layout="@layout/fragment_create_event">
        <action
            android:id="@+id/action_createEventFragment_to_navigation_calendar"
            app:destination="@id/navigation_calendar"
            app:popUpTo="@id/navigation_calendar"
            app:popUpToInclusive="true" />
        <argument
            android:name="eventId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_createEventFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>