<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/event_details_color"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nothing"
            tools:background="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/title_value"
                style="@style/EventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:padding="0dp"
                tools:text="Event Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Event Date" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/at" />

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Event Time" />
            </LinearLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/location"
                            style="@style/EventDetails"
                            android:text="@string/location" />

                        <TextView
                            android:id="@+id/location_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Event Location" />

                        <TextView
                            android:id="@+id/group"
                            style="@style/EventDetails"
                            android:text="@string/group" />

                        <TextView
                            android:id="@+id/group_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Event Location" />

                        <TextView
                            android:id="@+id/url"
                            style="@style/EventDetails"
                            android:text="@string/url" />

                        <TextView
                            android:id="@+id/url_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Event URL" />

                        <TextView
                            android:id="@+id/notes"
                            style="@style/EventDetails"
                            android:text="@string/notes" />

                        <TextView
                            android:id="@+id/notes_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Event Notes" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="50dp" />
                    </LinearLayout>
                </ScrollView>

                <!-- For testing purpose -->
                <TextView
                    android:id="@+id/edit_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/base_margin"
                    android:text="@string/edit" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/edit"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
